objects/Project__c.object
<CustomObject>
    <description>Client Services would like to leverage usage of this object for purposes of tracking deployments, etc.</description>
    <fields>
        <fullName>ACV_Amount__c</fullName>
        <description>related to the site/product</description>
        <label>Project Level ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_Billed__c</fullName>
        <description>Used by Liquid Planner integration to bring over billed hours.</description>
        <label>Actual Hours Billed</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billed_Hours__c</fullName>
        <description>for Finance to track how many hours are allocated in the contract</description>
        <label>Billable Hours Per Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for Finance to determine if even if more hours are allocated if they can bill for more</description>
        <label>Billing Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Rate_Calc__c</fullName>
        <formula>IF(Estimated_Hours__c&gt;0, Services_Amount__c / Estimated_Hours__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Rate__c</fullName>
        <description>Estimated rate of $/hr for Finance</description>
        <label>Billing Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-billable</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Material</fullName>
                </value>
                <value>
                    <fullName>Fixed Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Solutions Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <formula>CASE(  Health__c , &quot;Green&quot;,
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 15), 
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, 15))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Terms__c</fullName>
        <label>Commercial Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Former completion date field</description>
        <inlineHelpText>When product is a license, represents handover from CS to Support.
When product is services, completion date of the service.</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Live_to_Site__c</fullName>
        <formula>LTS__c  - Opportunity__r.Agreement_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Live to Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Close_to_LTS__c</fullName>
        <formula>LTS__c -  Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Close to LTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Start_to_LTS__c</fullName>
        <formula>LTS__c -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Start to LTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_between_Effective_and_Start_Dat__c</fullName>
        <formula>Start_Date__c-Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration between Effective &amp; Start Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_between_Start_and_ELTS__c</fullName>
        <formula>Expected_Completion_Date__c -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration between Start and ELTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELTS__c</fullName>
        <formula>if(not( ISBLANK( LTS__c )),0, Expected_Completion_Date__c - Opportunity__r.CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration between Effective &amp; ELTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Days__c</fullName>
        <formula>IF( TODAY() &gt;=Completion_Date__c,  Completion_Date__c  - Start_Date__c ,
IF (TODAY() &gt;= Start_Date__c,  TODAY() - Start_Date__c, null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Excellence_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual from the Excellence Team who will support this project.</description>
        <inlineHelpText>Individual from the Excellence Team who will support this project.</inlineHelpText>
        <label>Excellence Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Live-to-Site Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hand_off_to_Support_Date__c</fullName>
        <label>Hand off to Support Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Health__c</fullName>
        <label>Project Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#78C953</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hurdles_to_Duration__c</fullName>
        <label>Hurdles to Duration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intacct_Billed__c</fullName>
        <description>Pulled from Intacct by Project ID</description>
        <label>Intacct Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intacct_Customer_ID__c</fullName>
        <formula>Account__r.Intacct_Customer_ID__c</formula>
        <label>Intacct Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTS__c</fullName>
        <label>Live-to-Site Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liquid_Planner_ID_2__c</fullName>
        <description>Liquid Planner ID used for testing integration</description>
        <label>Liquid Planner ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liquid_Planner_ID__c</fullName>
        <label>Liquid Planner ID (OLD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Listen_Mode_Date__c</fullName>
        <label>Listen Mode Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Project_Id__c</fullName>
        <description>UE SF Project Id</description>
        <label>Old Project Id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Resources__c</fullName>
        <description>Captures the names of partners working a project</description>
        <label>Partner Resources</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_LOE__c</fullName>
        <label>Planned LOE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preconditions__c</fullName>
        <label>Preconditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_ProjectId__c</fullName>
        <label>Previous ProjectId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>True lookup of Product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Old static list for Product</description>
        <label>Old Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License: RichConnect+Email</fullName>
                </value>
                <value>
                    <fullName>License: RichContent+Onsite</fullName>
                </value>
                <value>
                    <fullName>License: RichPromo+Email</fullName>
                </value>
                <value>
                    <fullName>License: RichPromo+Mobile</fullName>
                </value>
                <value>
                    <fullName>License: RichPromo+Onsite</fullName>
                </value>
                <value>
                    <fullName>License: RichRecs+Anywhere</fullName>
                </value>
                <value>
                    <fullName>License: RichRecs+Email</fullName>
                </value>
                <value>
                    <fullName>License: RichRecs+ICS</fullName>
                </value>
                <value>
                    <fullName>License: RichRecs+Mobile</fullName>
                </value>
                <value>
                    <fullName>License: RichRecs+MyRecs</fullName>
                </value>
                <value>
                    <fullName>License: RichRecs+Onsite</fullName>
                </value>
                <value>
                    <fullName>License: RichRecs+Personalized Sort</fullName>
                </value>
                <value>
                    <fullName>RichAds + Direct</fullName>
                </value>
                <value>
                    <fullName>RichAds + Full Service</fullName>
                </value>
                <value>
                    <fullName>RichAds + Trafficker</fullName>
                </value>
                <value>
                    <fullName>RichRecs + Offsite Ads</fullName>
                </value>
                <value>
                    <fullName>Services: CE - A/B Testing</fullName>
                </value>
                <value>
                    <fullName>Services: CE - Strategic Roadmap Service</fullName>
                </value>
                <value>
                    <fullName>Services: CE - Data Consulting</fullName>
                </value>
                <value>
                    <fullName>Services: CE - Hill Climbing Service</fullName>
                </value>
                <value>
                    <fullName>Services: CE - Retainer</fullName>
                </value>
                <value>
                    <fullName>Services: CE - Pre-Implementation Strategy</fullName>
                </value>
                <value>
                    <fullName>Services: CE - Pre-Sales Discovery</fullName>
                </value>
                <value>
                    <fullName>Services: CE - UX Consulting</fullName>
                </value>
                <value>
                    <fullName>ClickSee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Activities__c</fullName>
        <label>Project Activities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Hold_Justification__c</fullName>
        <description>If project is on hold, Client Services should provide a detailed explanation/justification for the hold (including the date the project was put on hold).</description>
        <inlineHelpText>If project is on hold, Client Services should provide a detailed explanation/justification for the hold (including the date the project was put on hold).</inlineHelpText>
        <label>Project Hold Justification</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <displayFormat>P-{000000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aswan Morgan</fullName>
                </value>
                <value>
                    <fullName>Babak Vahidi</fullName>
                </value>
                <value>
                    <fullName>Chase Westlye</fullName>
                </value>
                <value>
                    <fullName>Dan Begley-Groth</fullName>
                </value>
                <value>
                    <fullName>Daniel Ngwerume</fullName>
                </value>
                <value>
                    <fullName>David Lewis</fullName>
                </value>
                <value>
                    <fullName>Emily Desaire</fullName>
                </value>
                <value>
                    <fullName>Emma Hands</fullName>
                </value>
                <value>
                    <fullName>Fredrik Stålhammar</fullName>
                </value>
                <value>
                    <fullName>Gefei Zhang</fullName>
                </value>
                <value>
                    <fullName>James Summers</fullName>
                </value>
                <value>
                    <fullName>Jane Axelsson</fullName>
                </value>
                <value>
                    <fullName>Jose Vargas Casadiego</fullName>
                </value>
                <value>
                    <fullName>Josh Olayos</fullName>
                </value>
                <value>
                    <fullName>Laura Wishingrad</fullName>
                </value>
                <value>
                    <fullName>Leah Keeler</fullName>
                </value>
                <value>
                    <fullName>Liat Zarfati</fullName>
                </value>
                <value>
                    <fullName>Lindsay Entsminger</fullName>
                </value>
                <value>
                    <fullName>Masumi Wada</fullName>
                </value>
                <value>
                    <fullName>Matthew Alexander</fullName>
                </value>
                <value>
                    <fullName>Michael Bolton</fullName>
                </value>
                <value>
                    <fullName>Nicholas El-Khoury</fullName>
                </value>
                <value>
                    <fullName>Nidhi Shah</fullName>
                </value>
                <value>
                    <fullName>Nikhil Ratan</fullName>
                </value>
                <value>
                    <fullName>Nikhil Verma</fullName>
                </value>
                <value>
                    <fullName>Ohad Sternberg</fullName>
                </value>
                <value>
                    <fullName>Pascal Davis</fullName>
                </value>
                <value>
                    <fullName>Russell Huerta</fullName>
                </value>
                <value>
                    <fullName>Sarah Chandler</fullName>
                </value>
                <value>
                    <fullName>Sara Svedevi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project Migrated to new PSA FinancialForce.</description>
        <inlineHelpText>Project Migrated to new PSA FinancialForce.</inlineHelpText>
        <label>Project Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Status2__c</fullName>
        <formula>IF( TODAY() &gt;=   Completion_Date__c ,&quot;Completed&quot;,IF( TODAY() &gt;=  LTS__c , &quot;Live&quot;,
 IF(TODAY() &gt;= Start_Date__c, &quot;Active&quot;,  &quot;Not Started&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_on_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client services will select this field if the project has been put on hold.  Doing so will exclude this project from the weekly Project Summary Report.</description>
        <inlineHelpText>Client services will select this field if the project has been put on hold.  Doing so will exclude this project from the weekly Project Summary Report.</inlineHelpText>
        <label>Project on Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Client Not engaged</fullName>
                </value>
                <value>
                    <fullName>2 - Commited Phased Roll-Out</fullName>
                </value>
                <value>
                    <fullName>3 - Product Issue</fullName>
                </value>
                <value>
                    <fullName>4 - Redesign/replatforming</fullName>
                </value>
                <value>
                    <fullName>5 - In progress</fullName>
                </value>
                <value>
                    <fullName>9 - Activation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_Effective_Date__c</fullName>
        <label>SOW Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Amount__c</fullName>
        <description>services/integration cost associated with product</description>
        <label>Services Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Discount__c</fullName>
        <description>Negative amount representing discount</description>
        <label>Services Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Lead__c</fullName>
        <label>Technical Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albert Mallol</fullName>
                </value>
                <value>
                    <fullName>Amanda Kiner</fullName>
                </value>
                <value>
                    <fullName>Daniele Bernardi</fullName>
                </value>
                <value>
                    <fullName>David Hu</fullName>
                </value>
                <value>
                    <fullName>David Lewis</fullName>
                </value>
                <value>
                    <fullName>Jacob Coble</fullName>
                </value>
                <value>
                    <fullName>Jane Axelsson</fullName>
                </value>
                <value>
                    <fullName>Jose Vargas Casadiego</fullName>
                </value>
                <value>
                    <fullName>Lindsay Entsminger</fullName>
                </value>
                <value>
                    <fullName>Mark Barnett</fullName>
                </value>
                <value>
                    <fullName>Matthew Alexander</fullName>
                </value>
                <value>
                    <fullName>Nidhi Shah</fullName>
                </value>
                <value>
                    <fullName>Nikhil Verma</fullName>
                </value>
                <value>
                    <fullName>Sarah Chandler</fullName>
                </value>
                <value>
                    <fullName>Sara Svedevi</fullName>
                </value>
                <value>
                    <fullName>Sean Colquhoun</fullName>
                </value>
                <value>
                    <fullName>Simon Mak</fullName>
                </value>
                <value>
                    <fullName>Thomas Culetto</fullName>
                </value>
                <value>
                    <fullName>Tiago Turra</fullName>
                </value>
                <value>
                    <fullName>Tina Nielsen</fullName>
                </value>
                <value>
                    <fullName>Vinay Vijayakumar</fullName>
                </value>
                <value>
                    <fullName>Willow Curry</fullName>
                </value>
                <value>
                    <fullName>Yves Lebreton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>ACV_Amount__c + Services_Amount__c +  Services_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deployment/Implementation</fullName>
                </value>
                <value>
                    <fullName>Re-design/Re-Platform</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>A/B Test</fullName>
                </value>
                <value>
                    <fullName>Custom Development</fullName>
                </value>
                <value>
                    <fullName>Deployment-Decommitted</fullName>
                </value>
                <value>
                    <fullName>Client Excellence</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Post Live Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project (Old)</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Liquid_Planer_length_format</fullName>
        <active>true</active>
        <description>LP ID should capture numeric 8-character numeric values (0-9)
Additional IDs to be added after adding &quot;, &quot;.</description>
        <errorConditionFormula>NOT( 
OR (
ISBLANK(Liquid_Planner_ID_2__c ) , 
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{7}&quot;),
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{8}&quot;), 
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{8},[ ][0-9]{8}&quot;), 
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{8},[ ][0-9]{8},[ ][0-9]{8}&quot;), 
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8}&quot;), 
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8}&quot;), 
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8}&quot;), 
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8}&quot;), 
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8}&quot;), 
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8}&quot;), 
REGEX( Liquid_Planner_ID_2__c , &quot;[0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8},[ ][0-9]{8}&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Liquid_Planner_ID_2__c</errorDisplayField>
        <errorMessage>Enter only 8-digit numeric values (0-9) 
For addtl. IDs, enter 8-digit numeric values separated by a comma and a space 
i.e. &quot;12345678, 0987654321&quot;</errorMessage>
    </validationRules>
</CustomObject>